測試捲軸寫法

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_about">關於</string>
     <string name="title_activity_view2">view2</string>
+    <string name="title_activity_scroll">捲軸測試</string>
 
 </resources>
