--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     </string-array>
 
     <string name="title_activity_list_view_icon">ListView 圖示測試</string>
+    <string name="title_activity_fragment">FragmentActivity</string>
 
 </resources>
